// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Paginator with one page renders nothing 1`] = `<div />`;

exports[`Paginator with three pages on the first page renders correctly 1`] = `
<footer
  data-testid="paginator"
>
  <ul
    class="css-fm3157"
  >
    <li>
      «
    </li>
    <li>
      ‹
    </li>
    <li>
      1
    </li>
    <li>
      <a
        class="css-nk3r0j"
        href="/page/2"
      >
        2
      </a>
    </li>
    <li>
      <a
        class="css-nk3r0j"
        href="/page/3"
      >
        3
      </a>
    </li>
    <li>
      <a
        class="css-nk3r0j"
        href="/page/2"
      >
        ›
      </a>
    </li>
    <li>
      <a
        class="css-nk3r0j"
        href="/page/3"
      >
        »
      </a>
    </li>
  </ul>
</footer>
`;

exports[`Paginator with three pages on the last page renders correctly 1`] = `
<footer
  data-testid="paginator"
>
  <ul
    class="css-fm3157"
  >
    <li>
      <a
        aria-current="page"
        class="css-nk3r0j"
        href="/"
      >
        «
      </a>
    </li>
    <li>
      <a
        class="css-nk3r0j"
        href="/page/2"
      >
        ‹
      </a>
    </li>
    <li>
      <a
        aria-current="page"
        class="css-nk3r0j"
        href="/"
      >
        1
      </a>
    </li>
    <li>
      <a
        class="css-nk3r0j"
        href="/page/2"
      >
        2
      </a>
    </li>
    <li>
      3
    </li>
    <li>
      ›
    </li>
    <li>
      »
    </li>
  </ul>
</footer>
`;
